# airwidget

./: .gitignore  CMakeLists.txt
include/: .drawpane.h.swp  drawpane.h  drawpaneFunctions.h  elements.h  icons.h  mycolors.h  myleakage.h  myzone.h
include/air/: leakage.h  multizone.h
src/: drawpane.cpp  drawpaneFunctions.cpp  elements.cpp  main.cpp  mycolors.cpp  myleakage.cpp  myzone.cpp
src/air/: leakage.cpp  multizone.cpp
